force-app/main/default/objects/task/fields/Call_Duration_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Call_Duration_Minutes__c</fullName>
    <label>Call Duration (Minutes)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
    <visibilityPublic</visibilityPublic>
</CustomField>